# python-project-50

./: .gitignore  Makefile  README.md  abracadabra.py  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: difference_calc.yml  my_workflow.yml  pyci.yml
gendiff/: cli.py  generate_diff.py  parser.py
gendiff/files/: file1.json  file2.json  my_result  resdiffnew
gendiff/formatter/: diff_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_comparison.py  test_gendiff.py  test_generate_diff.py  test_parser.py  test_plain.py  test_stylish.py
tests/fixtures/: result.txt
tests/test_data/: get_diff_data_result
